syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc.common";
option java_outer_classname = "ProductProto";

service ProductService {
  rpc GetProductById (ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  string productId = 1;
}

message ProductResponse {
  string productId = 1;
  string name = 2;
  double price = 3;
}